--- a/src/main/resources/registry/register.html
+++ b/src/main/resources/registry/register.html
@@ -1,6 +1,6 @@
 
 <!doctype html>
-<html lang="en">
+<html lang="pl" xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -8,8 +8,8 @@
     <meta name="author" content="">
 
 
-    <title>Checkout example for Bootstrap</title>
-
+    <title>Registry website</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -26,19 +26,19 @@
       </div>
         <div class="col-md-25 order-md-3">
 
-          <form class="needs-validation" novalidate>
+          <form class="needs-validation" action="#" th:action="@{/greeting}" th:object="${greeting}" method="post">
 
             <div class="row">
               <div class="col-md-6 mb-3">
                 <label for="firstName">Login</label>
-                <input type="text" class="form-control" id="Login" placeholder="" value="" required>
+                <input type="text" class="form-control" id="Login" placeholder="Login" th:field="*{login}" required>
                 <div class="invalid-feedback">
                   Valid first name is required.
                 </div>
               </div>
               <div class="col-md-6 mb-3">
                 <label for="lastName">Hasło</label>
-                <input type="password" class="form-control" id="password" placeholder="" value="" required>
+                <input type="password" class="form-control" id="password" th:field="*{password}" placeholder="password" required>
                 <div class="invalid-feedback">
                   Valid last name is required.
                 </div>
@@ -46,14 +46,14 @@
             </div><div class="row">
             <div class="col-md-6 mb-3">
               <label for="firstName">Imię</label>
-              <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
+              <input type="text" class="form-control" id="firstName" placeholder="" th:field="*{firstName}" required>
               <div class="invalid-feedback">
                 Valid first name is required.
               </div>
             </div>
             <div class="col-md-6 mb-3">
               <label for="lastName">Nazwisko</label>
-              <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
+              <input type="text" class="form-control" id="lastName" placeholder="" th:field="*{lastName}" required>
               <div class="invalid-feedback">
                 Valid last name is required.
               </div>
@@ -61,7 +61,7 @@
           </div>
             <div class="mb-3">
               <label for="email">Email </label>
-              <input type="email" class="form-control" id="email" placeholder="you@example.com" required>
+              <input type="email" class="form-control" id="email" placeholder="you@example.com" th:field="*{email}" required>
               <div class="invalid-feedback">
                 Please enter a valid email address for shipping updates.
               </div>
@@ -73,7 +73,7 @@
             <div class="row">
               <div class="col-md-5 " align="center">
                 <label for="sex">Płeć</label>
-                <select class="custom-select d-block w-1020" id="sex" required>
+                <select class="custom-select d-block w-1020" id="sex" th:field="*{sex}" required>
                   <option value="">Wybierz</option>
                   <option>Kobieta</option>
                   <option>Mężczyzna</option>
